<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:background="@drawable/background">



       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="30dp"
           app:cardCornerRadius="30dp"
           app:cardElevation="20dp">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/borda"
               android:orientation="vertical"
               android:layout_gravity="center_horizontal"
               android:padding="24dp">
               <ImageView
                   android:layout_gravity="center"
                   android:layout_marginTop="20dp"
                   android:layout_width="200dp"
                   android:layout_height="200dp"
                   android:src="@drawable/ambienteicon" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:drawableLeft="@drawable/perfil"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawablePadding="5dp"
        android:layout_marginTop="80dp"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/senha" />

    <Button
        android:id="@+id/buttonEntrar"
        android:textStyle="bold"
        android:backgroundTint="#46B49A"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar" />

    <TextView
        android:id="@+id/textViewCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semcadastro"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />
         </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>
